# opendlms

./: .gitignore  CMakeLists.txt  README.md
client/: README.md
client/lib/: AxdrPrinter.cpp  AxdrPrinter.h  Configuration.cpp  Configuration.h  CosemClient.cpp  CosemClient.h  Module.mk  Transport.cpp  Transport.h
client/src/: Module.mk  cosem_client_hal.c  main.cpp
common/ip/: tcp_server.c  tcp_server.h
cosemlib/: CMakeLists.txt
cosemlib/src/: csm_array.c  csm_array.h  csm_association.c  csm_association.h  csm_axdr_codec.c  csm_axdr_codec.h  csm_ber.c  csm_ber.h  csm_channel.c  csm_channel.h  csm_client.c  csm_client.h  csm_database.h  csm_definitions.h  csm_llc.c  csm_llc.h  csm_security.c  csm_security.h  csm_server.c  csm_server.h  csm_services.c  csm_services.h
cosemlib/util/: bitfield.c  bitfield.h  os_util.c  os_util.h  transports.h
docs/: CMakeLists.txt  MeterDevice.js  app.js  index.html  libmetersim.c
docs/assets/: gateway_diagram.drawio
docs/components/: LcdTopValue.js  MeterEnclosure.js  SevenSegment.js  TopNavBar.js  TutorialPanel.js
examples/metersimulator/: CMakeLists.txt
examples/metersimulator/src/: cosem_server_hal.c  db_cosem_object_list.h  main.c  meter.c  meter.h  object_list.json  server_config.h
examples/metersimulator/tests/: client.py
examples/metersimulator/www/: app.js  custom-circle.js  gateway.ts  index.html
examples/metersimulator/www/components/: LcdTopValue.js
objectmodel/: DATETIME_UTILITIES_GUIDE.md  QUICKSTART.md  README_ATP.md  README_ATP_FULL.md  index.html  package-lock.json  package.json  start_parser_service.sh  test-class22.js  word_parser_service.py
objectmodel/src/: App.vue  style.css
objectmodel/src/components/: AtpDetailView.vue  AtpEditModal.vue  AtpFileUpload.vue  AtpManager.vue  AtpStats.vue  AtpTestList.vue  AtpTreeView.vue  AttributeItemComponent.vue  DateTimeUtilities.vue  EmptyStateComponent.vue  ErrorComponent.vue  FileUploadComponent.vue  GeneratedXmlDisplay.vue  HeaderComponent.vue  LoadingComponent.vue  MainContentComponent.vue  ObjectItemComponent.vue  ObjectTreePanel.vue  RequestButtons.vue  SchemaSelector.vue  SearchFilterComponent.vue  SelectedAttributeInfo.vue  TreeNodeItem.vue  XmlGenerationPanel.vue
objectmodel/src/dlms/: index.ts
objectmodel/src/dlms/classes/: Class01_Data.ts  Class03_Register.ts  Class22_SingleActionSchedule.ts  Class40_PushSetup.ts
objectmodel/src/dlms/factory/: CosemClassFactory.ts
objectmodel/src/dlms/interfaces/: ICosemClass.ts
objectmodel/src/dlms/types/: common.ts
objectmodel/src/dlms/utils/: xmlGenerator.ts
objectmodel/src/services/: atpDatabaseService.ts  atpParserService.ts  atpTreeService.ts  clipboardService.ts  dlmsService.ts  excelService.ts  xmlService.ts
objectmodel/src/types/: index.ts
server/: CMakeLists.txt
server/application/: app_calendar.h  app_database.c  app_database.h  meter_definitions.h
server/database/: db_cosem_associations.c  db_cosem_associations.h  db_cosem_clock.c  db_cosem_clock.h  db_definitions.h
server/src/: meter.c  meter.h
studio/: Makefile  README.md  icon.rc  shaddam.pro  shaddam.qrc
studio/assets/scripts/: cosem.lua  help.lua  util.lua
studio/docs/: README.md  axdr_cosem.txt
studio/etc/: image_transfer.lua  session.json  test_regex.lua
studio/etc/ace6k_sec/: comm.json  objectlist.json  session.json
studio/etc/ace6k_sec/acd6k_sec/: Clock.xml  LoadProfile.xml
studio/etc/saphir0899/: Clock.xml
studio/src/: Cosem.cpp  Cosem.h  IniFile.cpp  IniFile.h  LuaWrapper.cpp  LuaWrapper.h  Serial.cpp  Serial.h  Settings.cpp  Settings.h  ThreadQueue.h  Util.cpp  Util.h  definitions.h  icon.aps  main.cpp  main_uip.cpp  mainwindow.cpp  mainwindow.h
studio/src/efs/: Efs.cpp  Efs.h  cm.luac  generate.bat  img.luac
studio/src/ui/: generate.bat  upgrade.led  upgrade_ui.c
studio/tests/: CMakeLists.txt  Module.mk  cosem_tests_hal.c  test_association.cpp
studio/tools/lua/: ImageTransfer5.txt  bin2c.lua  cayox1.txt  test.lua
tests/: CMakeLists.txt  cosem_tests_hal.c  main.cpp  pydlms-association.py  pydlms.py  send.py  soft_meter.cpp  soft_meter.h  test_aes128gcm.cpp  test_association.cpp  test_clock.cpp
